// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot 1`] = `
<DocumentFragment>
  <article
    class="Workstyles__WorkArticle-v7yxvq-0 cbLtt"
  >
    <header
      class="Workstyles__WorkHeader-v7yxvq-1 hYwSwS"
    >
      <h2
        class="Title-sc-1izy8tn-0 Workstyles__WorkTitle-v7yxvq-2 dvoTJc"
      >
        Title
      </h2>
    </header>
    <aside
      class="Workstyles__WorkAside-v7yxvq-3 hVeXEE"
    >
      <p
        class="Workstyles__WorkText-v7yxvq-4 bwqqOW"
      >
        Text
      </p>
    </aside>
    <section
      class="Workstyles__WorkSection-v7yxvq-6 MKiZT"
    >
      <ul
        class="Workstyles__WorkList-v7yxvq-5 fLDfAf"
      >
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          O Boticário
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Renault
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Frimesa
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Apae
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Corteva
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Portinari
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Uniprime
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          HouseCricket
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Shopping Mueller
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          TFG
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Bem Paraná
        </li>
      </ul>
    </section>
  </article>
</DocumentFragment>
`;

exports[`Matches snapshot with high contrast 1`] = `
<DocumentFragment>
  <article
    class="Workstyles__WorkArticle-v7yxvq-0 gzKHpN"
  >
    <header
      class="Workstyles__WorkHeader-v7yxvq-1 hYwSwS"
    >
      <h2
        class="Title-sc-1izy8tn-0 Workstyles__WorkTitle-v7yxvq-2 ebWSGx"
      >
        Title
      </h2>
    </header>
    <aside
      class="Workstyles__WorkAside-v7yxvq-3 hVeXEE"
    >
      <p
        class="Workstyles__WorkText-v7yxvq-4 bwqqOW"
      >
        Text
      </p>
    </aside>
    <section
      class="Workstyles__WorkSection-v7yxvq-6 MKiZT"
    >
      <ul
        class="Workstyles__WorkList-v7yxvq-5 fLDfAf"
      >
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          O Boticário
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Renault
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Frimesa
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Apae
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Corteva
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Portinari
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Uniprime
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          HouseCricket
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Shopping Mueller
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          TFG
        </li>
        <li
          class="WorkListItemstyles__WorkListItem-ni5bcw-0 cIaERP"
        >
          Bem Paraná
        </li>
      </ul>
    </section>
  </article>
</DocumentFragment>
`;
